# gear

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  api.md  compile.sh  dev-notes.md  requirements.txt  setup.py
docs/: docs_requirements.txt
docs/source/: README.md  conf.py  index.rst
examples/: README.md
gear/: __init__.py  config.py  context.py  dtypes.py  errors.py  mpu.py  specs.py  utils.py
gear/comm/: __init__.py  base.py  nccl.py  torch.py
gear/dataset/: __init__.py  shared_dataset.py
gear/interface/: params.py  shard_client.py  shard_server.py
gear/loader/: __init__.py  basic_loader.py  distributed_offline_loader.py  offline_loader.py
gear/sampler/: __init__.py  base.py  global_sampler.py  sample_return.py  topk.py  uniform.py  utils.py  weighted.py
include/: circular_buffer.h  config.h  context.h  debug.h  env.h  gear_errors.h  kernel_launchers.h  macros.h  nccl_comm.h  utils.h
include/common/: align.h  cmp.h  dtypes.h  pybind.h  range.h  span.h  string_format.h  tensor.h
include/cuda/: one_dim_prefix_sum.cuh  sort.cuh  value_assign.cuh
include/index/: client.h  pybind.h  request.h  server.h  set.h  sim_status.h
include/memory/: cuda_memory.h  cuda_uvm.h  memory.h  memory_ptr.h  memory_ref.h  pybind.h  shared_memory.h
include/rdma/: ib_context.h  pybind.h  queue_pair.h  queue_pair_factory.h  rdma_client.h  rdma_server.h
include/serialize/: base.h
include/storage/: handler.h  pybind.h  specs.h  table.h
libgear/core/: __init__.pyi  index.pyi
src/: context.cc  env.cc  nccl_comm.cc  pybind.cc
src/common/: pybind.cc
src/cuda/: copy.cu  init.cu  one_dim_prefix_sum.cu  one_dim_sum.cu  value_assign.cu
src/index/: client.cc  pybind.cc  request.cc  server.cc
src/memory/: cuda_memory.cc  cuda_uvm.cc  memory.cc  pybind.cc  shared_memory.cc
src/rdma/: ib_context.cc  pybind.cc  queue_pair.cc  queue_pair_factory.cc  rdma_client.cc  rdma_server.cc
src/storage/: handler.cc  pybind.cc  (+2 more)
tests/: deepspeed_config.json  hostfile  run.sh  test_copy.py  test_offline_loader.py  test_specs.py  test_stubs.py  test_sub.py  test_table.py
(+43 files in other folders)
